native/bridge/include/jpdfium.h

// Annotation-Based Redaction (Mark / Commit pattern)

// Mark phase: create a single REDACT annotation at the given rectangle.
// The annotation is stored in the page's annotation dictionary; the content
// stream is NOT modified.  Returns the annotation index on success.
JPDFIUM_EXPORT int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h,
                                                   uint32_t argb,
                                                   int32_t* annot_index) JPDFIUM_NOEXCEPT;
// Mark phase: find all word matches and create REDACT annotations for each.
// Equivalent to jpdfium_redact_words_ex but ONLY creates annotations,
// without modifying the content stream.  Returns the number of annotations
// created in *matchCount.
JPDFIUM_EXPORT int32_t jpdfium_redact_mark_words(int64_t page, const char** words,
                                                 int32_t wordCount, float padding,
                                                 int32_t wholeWord, int32_t useRegex,
                                                 int32_t caseSensitive, uint32_t argb,
                                                 int32_t* matchCount) JPDFIUM_NOEXCEPT;
// Query: return the number of REDACT annotations on the page.
JPDFIUM_EXPORT int32_t jpdfium_annot_count_redacts(int64_t page, int32_t* count) JPDFIUM_NOEXCEPT;
// Query: return all REDACT annotation rects as JSON.
// [{"idx":0,"x":10.0,"y":20.0,"w":50.0,"h":12.0}, ...]
JPDFIUM_EXPORT int32_t jpdfium_annot_get_redacts_json(int64_t page, char** json) JPDFIUM_NOEXCEPT;
// Remove a specific REDACT annotation by its annotation index.
JPDFIUM_EXPORT int32_t jpdfium_annot_remove_redact(int64_t page,
                                                   int32_t annot_index) JPDFIUM_NOEXCEPT;
// Remove all REDACT annotations from the page (undo all marks).
JPDFIUM_EXPORT int32_t jpdfium_annot_clear_redacts(int64_t page) JPDFIUM_NOEXCEPT;