jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t *annot_index)
     * }
     */
    public static MethodHandle jpdfium_annot_create_redact$handle() {
        return jpdfium_annot_create_redact.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t *annot_index)
     * }
     */
    public static MemorySegment jpdfium_annot_create_redact$address() {
        return jpdfium_annot_create_redact.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t *annot_index)
     * }
     */
    public static int jpdfium_annot_create_redact(long page, float x, float y, float w, float h, int argb, MemorySegment annot_index) {
        var mh$ = jpdfium_annot_create_redact.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_annot_create_redact", page, x, y, w, h, argb, annot_index);
            }
            return (int)mh$.invokeExact(page, x, y, w, h, argb, annot_index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_mark_words {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_INT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_mark_words");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_mark_words(int64_t page, const char **words, int32_t wordCount, float padding, int32_t wholeWord, int32_t useRegex, int32_t caseSensitive, uint32_t argb, int32_t *matchCount)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_mark_words$descriptor() {
        return jpdfium_redact_mark_words.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_mark_words(int64_t page, const char **words, int32_t wordCount, float padding, int32_t wholeWord, int32_t useRegex, int32_t caseSensitive, uint32_t argb, int32_t *matchCount)
     * }
     */
    public static MethodHandle jpdfium_redact_mark_words$handle() {
        return jpdfium_redact_mark_words.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_mark_words(int64_t page, const char **words, int32_t wordCount, float padding, int32_t wholeWord, int32_t useRegex, int32_t caseSensitive, uint32_t argb, int32_t *matchCount)
     * }
     */
    public static MemorySegment jpdfium_redact_mark_words$address() {
        return jpdfium_redact_mark_words.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_mark_words(int64_t page, const char **words, int32_t wordCount, float padding, int32_t wholeWord, int32_t useRegex, int32_t caseSensitive, uint32_t argb, int32_t *matchCount)
     * }
     */
    public static int jpdfium_redact_mark_words(long page, MemorySegment words, int wordCount, float padding, int wholeWord, int useRegex, int caseSensitive, int argb, MemorySegment matchCount) {
        var mh$ = jpdfium_redact_mark_words.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_mark_words", page, words, wordCount, padding, wholeWord, useRegex, caseSensitive, argb, matchCount);
            }
            return (int)mh$.invokeExact(page, words, wordCount, padding, wholeWord, useRegex, caseSensitive, argb, matchCount);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_annot_count_redacts {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_annot_count_redacts");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_count_redacts(int64_t page, int32_t *count)
     * }
     */
    public static FunctionDescriptor jpdfium_annot_count_redacts$descriptor() {
        return jpdfium_annot_count_redacts.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_count_redacts(int64_t page, int32_t *count)
     * }
     */
    public static MethodHandle jpdfium_annot_count_redacts$handle() {
        return jpdfium_annot_count_redacts.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_count_redacts(int64_t page, int32_t *count)
     * }
     */
    public static MemorySegment jpdfium_annot_count_redacts$address() {
        return jpdfium_annot_count_redacts.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_annot_count_redacts(int64_t page, int32_t *count)
     * }
     */
    public static int jpdfium_annot_count_redacts(long page, MemorySegment count) {
        var mh$ = jpdfium_annot_count_redacts.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_annot_count_redacts", page, count);
            }
            return (int)mh$.invokeExact(page, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_annot_get_redacts_json {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_annot_get_redacts_json");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_get_redacts_json(int64_t page, char **json)
     * }
     */
    public static FunctionDescriptor jpdfium_annot_get_redacts_json$descriptor() {
        return jpdfium_annot_get_redacts_json.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_get_redacts_json(int64_t page, char **json)
     * }
     */
    public static MethodHandle jpdfium_annot_get_redacts_json$handle() {
        return jpdfium_annot_get_redacts_json.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_get_redacts_json(int64_t page, char **json)
     * }
     */
    public static MemorySegment jpdfium_annot_get_redacts_json$address() {
        return jpdfium_annot_get_redacts_json.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_annot_get_redacts_json(int64_t page, char **json)
     * }
     */
    public static int jpdfium_annot_get_redacts_json(long page, MemorySegment json) {
        var mh$ = jpdfium_annot_get_redacts_json.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_annot_get_redacts_json", page, json);
            }
            return (int)mh$.invokeExact(page, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_annot_remove_redact {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_annot_remove_redact");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_remove_redact(int64_t page, int32_t annot_index)
     * }
     */
    public static FunctionDescriptor jpdfium_annot_remove_redact$descriptor() {
        return jpdfium_annot_remove_redact.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_remove_redact(int64_t page, int32_t annot_index)
     * }
     */
    public static MethodHandle jpdfium_annot_remove_redact$handle() {
        return jpdfium_annot_remove_redact.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_remove_redact(int64_t page, int32_t annot_index)
     * }
     */
    public static MemorySegment jpdfium_annot_remove_redact$address() {
        return jpdfium_annot_remove_redact.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_annot_remove_redact(int64_t page, int32_t annot_index)
     * }
     */
    public static int jpdfium_annot_remove_redact(long page, int annot_index) {
        var mh$ = jpdfium_annot_remove_redact.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_annot_remove_redact", page, annot_index);
            }
            return (int)mh$.invokeExact(page, annot_index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_annot_clear_redacts {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_annot_clear_redacts");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_clear_redacts(int64_t page)
     * }
     */
    public static FunctionDescriptor jpdfium_annot_clear_redacts$descriptor() {
        return jpdfium_annot_clear_redacts.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_clear_redacts(int64_t page)
     * }
     */
    public static MethodHandle jpdfium_annot_clear_redacts$handle() {
        return jpdfium_annot_clear_redacts.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_clear_redacts(int64_t page)
     * }
     */
    public static MemorySegment jpdfium_annot_clear_redacts$address() {
        return jpdfium_annot_clear_redacts.ADDR;
    }
